package pt.ipp.isep.dei.esoft.project.ui.gui.tasks;

import javafx.collections.FXCollections;
import javafx.event.ActionEvent;
import javafx.fxml.FXML;
import javafx.fxml.Initializable;
import javafx.scene.control.Alert;
import javafx.scene.control.ButtonType;
import javafx.scene.control.ComboBox;
import javafx.scene.control.TextField;
import javafx.stage.Stage;
import pt.ipp.isep.dei.esoft.project.core.application.controller.RegisterTaskController;
import pt.ipp.isep.dei.esoft.project.core.application.domain.dto.GreenSpaceDto;
import pt.ipp.isep.dei.esoft.project.core.application.domain.task.Task;
import pt.ipp.isep.dei.esoft.project.utilities.Tempo;

import java.net.URL;
import java.util.ResourceBundle;

/**
 * UI Controller class for registering tasks.
 */
public class RegisterTaskUI implements Initializable {

    /**
     * The stage for this UI.
     */
    private Stage stage;

    /**
     * The register task controller instance.
     */
    private RegisterTaskController ctrl;

    @FXML
    private TextField title;

    @FXML
    private TextField description;

    @FXML
    private ComboBox<Task.DegreeUrgency> degreeOfUrgency;

    @FXML
    private ComboBox<GreenSpaceDto> greenSpace;

    @FXML
    private TextField timeExpected;

    /**
     * Initializes the controller class.
     */
    @Override
    public void initialize(URL url, ResourceBundle resourceBundle) {
        ctrl =  RegisterTaskController.getInstance();
        greenSpace.setItems(FXCollections.observableArrayList(ctrl.getGreenSpaceList()));
        degreeOfUrgency.setItems(FXCollections.observableArrayList(ctrl.getDegreOfUrgency()));
    }

    /**
     * Handles the register button action.
     *
     * @param event the action event
     */
    @FXML
    public void btnRegister(ActionEvent event) {
        String title = this.title.getText();
        String description = this.description.getText();
        Task.DegreeUrgency degreeOfUrgency = this.degreeOfUrgency.getValue();
        String timeExpected = this.timeExpected.getText();
        GreenSpaceDto greenSpaceDto = this.greenSpace.getValue();
        if (title==null ||  description==null || degreeOfUrgency==null || timeExpected==null || greenSpaceDto==null) {
            popUpOfVerifications(Alert.AlertType.ERROR,"Please input data in all fields");
        }else {
            try {
                Tempo timeExpec = getTimeForEntry(timeExpected);
                ctrl.registerTaskEntry(title,description,degreeOfUrgency,timeExpec,greenSpaceDto);
                if(popUp().showAndWait().get()== ButtonType.OK){
                    stage.close();
                }
            }catch (IllegalArgumentException e){
                popUpOfVerifications(Alert.AlertType.ERROR,e.getMessage()).show();
            }
        }
    }

    /**
     * Parses the time string and returns a Tempo object.
     *
     * @param timeExpected the time string
     * @return the Tempo object representing the time
     */
    private Tempo getTimeForEntry(String timeExpected) {
        String[] times = timeExpected.split(":");
        Tempo time;
        if (times.length == 2) {
            time = new Tempo(Integer.parseInt(times[0]),Integer.parseInt(times[1]));
        }else {
            throw new IllegalArgumentException("Invalid time format");
        }
        return time;
    }

    /**
     * Sets the stage for this UI.
     *
     * @param stage the stage
     */
    public void setStage(Stage stage){
        this.stage=stage;
    }

    /**
     * Creates and returns an alert for successful task registration.
     *
     * @return the alert
     */
    private Alert popUp() {
        Alert alert = new Alert(Alert.AlertType.CONFIRMATION);
        alert.setHeaderText("Information");
        alert.setContentText("Task added!");

        return alert;
    }

    /**
     * Creates and returns an alert with a specified message.
     *
     * @param alertType the type of the alert
     * @param messages  the message to be displayed in the alert
     * @return the alert
     */
    private Alert popUpOfVerifications(Alert.AlertType alertType, String messages) {
        Alert alerta = new Alert(alertType);

        alerta.setTitle("ERROR");
        alerta.setHeaderText("Invalid Data");
        alerta.setContentText(messages);

        return alerta;
    }

}
