@startuml
skinparam shadowing false
skinparam classAttributeIconSize 0

left to right direction

package "UI" #f0f0f0{
    class RegisterTaskUI {
    }

}
package "Core" #f0f0f0{

    package "Controller" #dddddd{

        class RegisterTaskController {
            +createRegisterTaskController()
        }

        RegisterTaskUI ..>  RegisterTaskController


    }

    package "Domain" #dddddd{


        package "Mapper" #dddddd{

            class GreenSpaceMapper {
                +toDto(greenSpaceList)
            }

        }

        package "DTO" #dddddd{

            class EntryDto {
                +registerNewTask(entryDto): String
            }


            class GreenSpaceDto {
                +create()
                +getTeamName() : String
            }

            GreenSpaceMapper ..> GreenSpaceDto

        }



        package "Repository" #bbbbbb{

            class Repositories {
                - static instance : Repositories
                + getInstance() : Repositories
                + getEntryRepository() : EntryRepository
                - Repositories()
            }

            RegisterTaskController ..> Repositories : repositories

            Repositories --> Repositories : instance

            class EntryRepository {
                +registerNewTask(entryDto)
            }

            Repositories "1" --> "1" EntryRepository : entryRepository


            Repositories "1" --> "1" EntryRepository : entryRepository
            RegisterTaskController ..> EntryRepository: entryRepository

        }

        package "Model" #bbbbbb{

            class Entry {
                -status : EntryState
                -greenSpaceDto : GreenSpaceDto
                -title : String
                -description : String
                -expectedDuration : Tempo
                -degreeOfUrgency : Task.DegreeUrgency
                -startDate : Date
            }

            EntryRepository "1" --> "*" Entry

            class Task {
                +getDegreeUrgency()
            }

            class GreenSpace {
                +getGreenSpaceList(): List<GreenSpace>
            }

            EntryRepository "1" --> "*" Entry


            class Organization {
                +getGreenSpaceList(): List<GreenSpace>
            }

            GreenSpace "*" --> "1" Organization

        }
    }
}

@enduml
